[gd_scene load_steps=39 format=3 uid="uid://bvnq3ihcq0wv5"]

[ext_resource type="Script" path="res://scenes/main/main.gd" id="1_ugoic"]
[ext_resource type="AudioStream" uid="uid://dumvvegagsow8" path="res://scenes/main/background_music.mp3" id="2_fs43o"]
[ext_resource type="Texture2D" uid="uid://b2ekrwndbhis3" path="res://ui/title.png" id="2_jihug"]
[ext_resource type="Texture2D" uid="uid://du0c1iflhkw3w" path="res://scenes/main/shop.png" id="2_qyw7l"]
[ext_resource type="Texture2D" uid="uid://dhpocmwr8t1rf" path="res://ui/cursor.png" id="2_upoqs"]
[ext_resource type="Script" path="res://scenes/title/title.gd" id="2_xrnhi"]
[ext_resource type="AudioStream" uid="uid://d178ckv7posw5" path="res://entities/distractions/bottle/bottle.mp3" id="3_6dcnr"]
[ext_resource type="Texture2D" uid="uid://ojnb75vsbxf7" path="res://ui/distractionbar_empty.png" id="3_6jo23"]
[ext_resource type="Texture2D" uid="uid://cc3dcwj82gj8e" path="res://ui/begin.png" id="3_an3ry"]
[ext_resource type="Texture2D" uid="uid://bwnyygajk5akb" path="res://ui/right_hand_aim.png" id="3_hco4p"]
[ext_resource type="Texture2D" uid="uid://ds7lj3h5h42yl" path="res://scenes/main/shelf.png" id="3_mf8wl"]
[ext_resource type="AudioStream" uid="uid://cxjicqhy0eixw" path="res://entities/items/item_get.mp3" id="3_v5re7"]
[ext_resource type="Texture2D" uid="uid://2wfoqqn4a5or" path="res://ui/ball.png" id="4_hkygl"]
[ext_resource type="Texture2D" uid="uid://ca6g1w13mniov" path="res://ui/left_hand.png" id="4_n444t"]
[ext_resource type="Texture2D" uid="uid://3dpayfjb657w" path="res://ui/distractionbar_full.png" id="4_r6jam"]
[ext_resource type="Texture2D" uid="uid://ce6jfb1qk8xup" path="res://ui/distractionbar_icon.png" id="6_soser"]
[ext_resource type="PackedScene" uid="uid://dpmpd3c7aj66g" path="res://entities/items/item.tscn" id="6_vt5ph"]
[ext_resource type="Script" path="res://ui/ball.gd" id="7_eovov"]
[ext_resource type="AnimationLibrary" uid="uid://dvf0dx0kehgy0" path="res://globals/animation_library.tres" id="7_lo4so"]
[ext_resource type="Texture2D" uid="uid://dfdlab6im6hvc" path="res://entities/shopkeep/shopkeep.png" id="8_bjod3"]
[ext_resource type="Texture2D" uid="uid://d0ocmp2o0sypr" path="res://entities/items/coin_bag/coin_bag_still.png" id="8_mbkdx"]
[ext_resource type="Texture2D" uid="uid://dk8ohftunwrvg" path="res://ui/instructions_mousehighlight.png" id="11_8tk2v"]
[ext_resource type="Texture2D" uid="uid://dektal54le410" path="res://ui/item_slash.png" id="11_jpylb"]
[ext_resource type="Texture2D" uid="uid://76mcet1cjdbg" path="res://ui/instructions_mousescroll.png" id="11_sw3pa"]
[ext_resource type="Texture2D" uid="uid://bgg7at5w7tva5" path="res://ui/instructions_mouseclick.png" id="12_lybr4"]
[ext_resource type="Texture2D" uid="uid://bhuhssfo75qie" path="res://scenes/main/table.png" id="15_7e7n7"]
[ext_resource type="PackedScene" uid="uid://b860ys2ckxmad" path="res://entities/distractions/distraction.tscn" id="15_s54gj"]
[ext_resource type="FontFile" uid="uid://dl8717bgierds" path="res://ui/pixelify_sans_regular.ttf" id="16_tp0q4"]
[ext_resource type="Texture2D" uid="uid://00iuw3h8i8lt" path="res://ui/side_sign_blank.png" id="25_12w2q"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jaadf"]
size = Vector2(247, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_04f1q"]
atlas = ExtResource("2_upoqs")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d8mji"]
atlas = ExtResource("2_upoqs")
region = Rect2(32, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_awmmg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_04f1q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d8mji")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_52kw8"]
resource_name = "click"
length = 3.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5, 3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.7, 2.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [ExtResource("11_8tk2v"), ExtResource("12_lybr4"), ExtResource("11_8tk2v")]
}

[sub_resource type="Animation" id="Animation_gl4cm"]
resource_name = "fade"
length = 3.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5, 3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_knjfh"]
_data = {
"click": SubResource("Animation_52kw8"),
"fade": SubResource("Animation_gl4cm")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kycfc"]
size = Vector2(8, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5sgo1"]
size = Vector2(79, 142.999)

[node name="Main" type="Control"]
texture_filter = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ugoic")

[node name="BkgMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_fs43o")

[node name="SFX" type="Node" parent="."]

[node name="Ding" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("3_6dcnr")

[node name="Scrawling" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("3_v5re7")
volume_db = -13.0

[node name="Title" type="Control" parent="."]
z_index = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_xrnhi")

[node name="Bkg" type="ColorRect" parent="Title"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.286275, 0.286275, 0.286275, 0.811765)

[node name="Logo" type="TextureRect" parent="Title"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -224.0
offset_right = 224.0
offset_bottom = 160.0
grow_horizontal = 2
texture = ExtResource("2_jihug")

[node name="BeginButton" type="TextureRect" parent="Title"]
layout_mode = 0
offset_left = 356.0
offset_top = 331.0
offset_right = 604.0
offset_bottom = 381.0
texture = ExtResource("3_an3ry")

[node name="Area2D" type="Area2D" parent="Title/BeginButton" groups=["begin_area"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Title/BeginButton/Area2D"]
position = Vector2(123.5, 25)
shape = SubResource("RectangleShape2D_jaadf")

[node name="TitleMarkers" type="Node2D" parent="."]
position = Vector2(0, 199)

[node name="Shelf0" type="Marker2D" parent="TitleMarkers"]
position = Vector2(0, 65)
gizmo_extents = 28.0

[node name="Shelf1" type="Marker2D" parent="TitleMarkers"]
position = Vector2(0, 155)
gizmo_extents = 28.0

[node name="Shelf2" type="Marker2D" parent="TitleMarkers"]
position = Vector2(0, 245)
gizmo_extents = 28.0

[node name="ShelfMarkers" type="Node2D" parent="."]

[node name="Shelf0" type="Marker2D" parent="ShelfMarkers"]
position = Vector2(0, 65)
gizmo_extents = 28.0

[node name="Shelf1" type="Marker2D" parent="ShelfMarkers"]
position = Vector2(0, 155)
gizmo_extents = 28.0

[node name="Shelf2" type="Marker2D" parent="ShelfMarkers"]
position = Vector2(0, 245)
gizmo_extents = 28.0

[node name="Bkg" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 960.0
offset_bottom = 540.0
texture = ExtResource("2_qyw7l")

[node name="Shelf" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 960.0
offset_bottom = 540.0
texture = ExtResource("3_mf8wl")

[node name="Cursor" type="AnimatedSprite2D" parent="."]
z_index = 3
position = Vector2(0, 264)
sprite_frames = SubResource("SpriteFrames_awmmg")
autoplay = "default"

[node name="Timer" type="Timer" parent="Cursor"]
wait_time = 0.3
one_shot = true

[node name="DistractionBar" type="Control" parent="."]
visible = false
z_index = 4
custom_minimum_size = Vector2(176, 24)
layout_mode = 1
anchor_left = 0.408333
anchor_top = 0.0148148
anchor_right = 0.591667
anchor_bottom = 0.0592593
offset_left = 0.000305176
offset_top = 2.00001
offset_right = 0.000305176
offset_bottom = 2.00001
grow_horizontal = 2
metadata/_edit_use_anchors_ = true

[node name="Empty" type="TextureRect" parent="DistractionBar"]
layout_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource("3_6jo23")
metadata/_edit_use_anchors_ = true

[node name="FillMask" type="ColorRect" parent="DistractionBar"]
clip_contents = true
layout_mode = 2
offset_right = 176.0
offset_bottom = 24.0
color = Color(1, 1, 1, 0)

[node name="Fill" type="TextureRect" parent="DistractionBar/FillMask"]
layout_mode = 1
offset_bottom = 9.6
texture = ExtResource("4_r6jam")
expand_mode = 1
stretch_mode = 2

[node name="Icon" type="TextureRect" parent="DistractionBar"]
layout_mode = 2
offset_left = 156.0
offset_top = -8.0
offset_right = 194.0
offset_bottom = 29.0
texture = ExtResource("6_soser")

[node name="FirstGameUI" type="TextureRect" parent="."]
visible = false
z_index = 4
custom_minimum_size = Vector2(176, 24)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -88.0
offset_top = -131.322
offset_right = 88.0
offset_bottom = -12.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("11_sw3pa")
expand_mode = 5
stretch_mode = 5

[node name="Timer" type="Timer" parent="FirstGameUI"]
wait_time = 3.5
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="FirstGameUI"]
libraries = {
"": SubResource("AnimationLibrary_knjfh")
}
autoplay = "fade"

[node name="Ball" type="Sprite2D" parent="."]
z_index = 2
position = Vector2(905, 484)
texture = ExtResource("4_hkygl")
script = ExtResource("7_eovov")
peak = true

[node name="Area2D" type="Area2D" parent="Ball"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ball/Area2D"]
shape = SubResource("RectangleShape2D_kycfc")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Ball"]
libraries = {
"": ExtResource("7_lo4so")
}

[node name="LeftHand" type="TextureRect" parent="."]
z_index = 2
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -196.0
offset_right = 192.0
grow_vertical = 0
texture = ExtResource("4_n444t")

[node name="ItemList" type="VBoxContainer" parent="LeftHand"]
layout_mode = 0
offset_left = 41.0
offset_top = 79.0
offset_right = 72.0
offset_bottom = 183.0
rotation = -0.316875

[node name="Item1" type="TextureRect" parent="LeftHand/ItemList"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
texture = ExtResource("8_mbkdx")
expand_mode = 5
stretch_mode = 5

[node name="Slash" type="TextureRect" parent="LeftHand/ItemList/Item1"]
visible = false
layout_mode = 1
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("11_jpylb")

[node name="Item2" type="TextureRect" parent="LeftHand/ItemList"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
texture = ExtResource("8_mbkdx")
expand_mode = 5
stretch_mode = 5

[node name="Slash" type="TextureRect" parent="LeftHand/ItemList/Item2"]
visible = false
layout_mode = 1
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("11_jpylb")

[node name="Item3" type="TextureRect" parent="LeftHand/ItemList"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
texture = ExtResource("8_mbkdx")
expand_mode = 5
stretch_mode = 5

[node name="Slash" type="TextureRect" parent="LeftHand/ItemList/Item3"]
visible = false
layout_mode = 1
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("11_jpylb")

[node name="RightHand" type="TextureRect" parent="."]
z_index = 2
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -156.0
offset_right = 10.0
offset_bottom = 8.0
grow_horizontal = 0
grow_vertical = 0
texture = ExtResource("3_hco4p")

[node name="Shopkeep" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(486, 213)
texture = ExtResource("8_bjod3")

[node name="PositionTimer" type="Timer" parent="Shopkeep"]
wait_time = 2.0
one_shot = true

[node name="DistractionTimer" type="Timer" parent="Shopkeep"]
wait_time = 3.0

[node name="Table" type="TextureRect" parent="."]
z_index = 1
layout_mode = 0
offset_right = 960.0
offset_bottom = 540.0
texture = ExtResource("15_7e7n7")

[node name="Items" type="Node2D" parent="."]
position = Vector2(746, 258)

[node name="Item" parent="Items" instance=ExtResource("6_vt5ph")]
position = Vector2(-426, -183)
animation = &"coin_bag"

[node name="Item2" parent="Items" instance=ExtResource("6_vt5ph")]
position = Vector2(1, -191)
animation = &"crown"

[node name="Item3" parent="Items" instance=ExtResource("6_vt5ph")]
position = Vector2(-470, -105)

[node name="Item4" parent="Items" instance=ExtResource("6_vt5ph")]
position = Vector2(-61, -103)
animation = &"crown"

[node name="Item5" parent="Items" instance=ExtResource("6_vt5ph")]
position = Vector2(-467, 0)
animation = &"coin_bag"

[node name="Item6" parent="Items" instance=ExtResource("6_vt5ph")]
animation = &"coin_bag"

[node name="Distractions" type="Node2D" parent="."]
position = Vector2(746, 258)

[node name="Distraction" parent="Distractions" instance=ExtResource("15_s54gj")]
position = Vector2(-107, -228)
animation = &"firecrackers"

[node name="Distraction2" parent="Distractions" instance=ExtResource("15_s54gj")]
position = Vector2(-361, -143)
animation = &"firecrackers"

[node name="Distraction3" parent="Distractions" instance=ExtResource("15_s54gj")]
position = Vector2(-335, -37)

[node name="Distraction4" parent="Distractions" instance=ExtResource("15_s54gj")]
position = Vector2(-114, -43)
animation = &"jack_in_the_box"

[node name="PauseButton" type="TextureRect" parent="."]
layout_mode = 0
offset_top = 59.0
offset_right = 80.0
offset_bottom = 203.0
texture = ExtResource("25_12w2q")
stretch_mode = 4

[node name="Area2D" type="Area2D" parent="PauseButton" groups=["pause_area"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PauseButton/Area2D"]
position = Vector2(39.5, 71.5004)
shape = SubResource("RectangleShape2D_5sgo1")

[node name="Label" type="Label" parent="PauseButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.0
offset_top = -23.5
offset_right = 66.0
offset_bottom = 23.5
grow_horizontal = 2
grow_vertical = 2
rotation = 1.5708
pivot_offset = Vector2(57, 23.5)
theme_override_fonts/font = ExtResource("16_tp0q4")
theme_override_font_sizes/font_size = 39
text = "Pause"

[connection signal="timeout" from="Cursor/Timer" to="." method="_on_cursor_timer_timeout"]
[connection signal="timeout" from="FirstGameUI/Timer" to="." method="_on_first_game_ui_timeout"]
[connection signal="peak_now" from="Ball" to="." method="_on_ball_peak"]
[connection signal="animation_finished" from="Ball/AnimationPlayer" to="." method="_on_ball_animation_finished"]
[connection signal="timeout" from="Shopkeep/PositionTimer" to="." method="_on_shopkeep_position_timer_timeout"]
[connection signal="timeout" from="Shopkeep/DistractionTimer" to="." method="_on_shopkeep_distraction_timer_timeout"]
